--- a/generators/server/templates/app/sonar-project.properties
+++ b/generators/server/templates/app/sonar-project.properties
@@ -7,10 +7,15 @@ sonar.sources=src/main/java
 sonar.tests=src/test/java
 sonar.exclusions=src/main/java/**/config/*.*,src/main/java/**/entities/*.*,src/main/java/**/models/*.*,src/main/java/**/exceptions/*.*,src/main/java/**/utils/*.*,src/main/java/**/*Application.*
 sonar.test.inclusions=**/*Test.java,**/*IntegrationTest.java,**/*IT.java
-sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
 sonar.java.codeCoveragePlugin=jacoco
+<%_ if (buildTool === 'maven') { _%>
+sonar.coverage.jacoco.xmlReportPaths=target/jacoco/test/jacoco.xml,target/jacoco/integrationTest/jacoco.xml
+sonar.junit.reportPaths=target/test-results/test,target/test-results/integrationTest
+<%_ } _%>
+<%_ if (buildTool === 'gradle') { _%>
+sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
 sonar.junit.reportPaths=build/test-results/test,build/test-results/integrationTest
-
+<%_ } _%>
 sonar.java.checkstyle.reportPaths=build/reports/checkstyle/main.xml
 sonar.java.pmd.reportPaths=build/reports/pmd/main.xml
 sonar.java.spotbugs.reportPaths=build/reports/spotbugs/main.html
