--- a/generators/server/templates/app/.github/workflows/maven-dev.yml
+++ b/generators/server/templates/app/.github/workflows/maven-dev.yml
@@ -22,9 +22,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.m2/repository
-          key: ${{`{{ runner.os }}`}}-maven-${{`{{ hashFiles('**/pom.xml') }}`}}
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{`{{ runner.os }}`}}-maven-
+            ${{ runner.os }}-maven-
 
       - name: Build with Maven
         run: ./mvn clean install
