Applied Google Java Format for java code

--- a/generators/server/templates/app/docker/docker-compose.yml
+++ b/generators/server/templates/app/docker/docker-compose.yml
@@ -15,10 +15,10 @@ services:
   mysqldb:
     image: mysql:5.7
     environment:
-      - MYSQL_DATABASE: appdb
-      - MYSQL_USER: siva
-      - MYSQL_PASSWORD: secret
-      - MYSQL_ROOT_PASSWORD: root
+      - MYSQL_DATABASE=appdb
+      - MYSQL_USER=siva
+      - MYSQL_PASSWORD=secret
+      - MYSQL_ROOT_PASSWORD=root
     ports:
       - "3306:3306"
 
@@ -27,10 +27,10 @@ services:
   mariadb:
     image: mariadb:10.5.8
     environment:
-      - MYSQL_DATABASE: appdb
-      - MYSQL_USER: siva
-      - MYSQL_PASSWORD: secret
-      - MYSQL_ROOT_PASSWORD: root
+      - MYSQL_DATABASE=appdb
+      - MYSQL_USER=siva
+      - MYSQL_PASSWORD=secret
+      - MYSQL_ROOT_PASSWORD=root
     ports:
       - "3306:3306"
 <%_ } _%>
