--- a/generators/server/templates/gradle/gradle.properties
+++ b/generators/server/templates/gradle/gradle.properties
@@ -8,6 +8,7 @@ sonar_plugin_version=<%= GRADLE_SONAR_PLUGIN_VERSION %>
 owasp_plugin_version=<%= GRADLE_OWASP_PLUGIN_VERSION %>
 spotbugs_plugin_version=<%= GRADLE_SPOTBUGS_PLUGIN_VERSION %>
 benmanes_versions_plugin_version=<%= GRADLE_BENMANES_VERSIONS_PLUGIN_VERSION %>
+google_java_format_plugin_version=<%= GOOGLE_JAVA_FORMAT_PLUGIN_VERSION %>
 
 jacoco_min_coverage_required=<%= JACOCO_MIN_COVERAGE_REQUIRED %>
 
