--- a/generators/server/templates/app/.editorconfig
+++ b/generators/server/templates/app/.editorconfig
@@ -5,13 +5,22 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = tab
+
+# We recommend you to keep these unchanged
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.java]
-ij_java_class_count_to_use_import_on_demand = 5
+# Change these settings to your own preference
+indent_style = space
+indent_size = 4
 
+[*.{ts, tsx, js, jsx, json, css, scss, yml, yaml}]
+indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
+
+[*.java]
+ij_java_class_count_to_use_import_on_demand = 999
