--- a/generators/server/templates/app/src/main/resources/application.properties
+++ b/generators/server/templates/app/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=<%= appName %>
 server.port=8080
+server.shutdown=graceful
 spring.main.allow-bean-definition-overriding=true
 spring.jmx.enabled=false
 
@@ -17,9 +18,8 @@ logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=ERRO
 <%_ } _%>
 
 ################ Actuator #####################
-management.endpoints.web.exposure.include=configprops,env,health,info,logfile,loggers
-management.endpoint.health.show-details=when_authorized
-management.health.mail.enabled=false
+management.endpoints.web.exposure.include=configprops,env,health,info,logfile,loggers,metrics
+management.endpoint.health.show-details=always
 
 ################ Database #####################
 spring.jpa.show-sql=true
@@ -29,9 +29,7 @@ spring.datasource.hikari.auto-commit=false
 spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-spring.jpa.properties.hibernate.id.new_generator_mappings=false
-#spring.jpa.properties.hibernate.cache.use_second_level_cache=true
-#spring.jpa.properties.hibernate.cache.use_query_cache=false
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.properties.hibernate.id.optimizer.pooled.preferred=pooled-lo
 spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.properties.hibernate.jdbc.batch_size=25
