--- a/generators/server/templates/gradle/code-quality.gradle
+++ b/generators/server/templates/gradle/code-quality.gradle
@@ -4,20 +4,18 @@ apply plugin: 'jacoco'
 apply plugin: "com.github.spotbugs"
 apply plugin: "org.sonarqube"
 
-def jacocoMinCoverageRequired = 0.30
-
 checkstyle {
-    toolVersion "8.32"
+    toolVersion "${checkstyle_plugin_version}"
     maxWarnings = 0
-    configFile = file("${project.rootDir}/build-config/checkstyle/checkstyle.xml")
+    configFile = file("build-config/checkstyle/checkstyle.xml")
     sourceSets = [sourceSets.main]
 }
 
 pmd {
-    toolVersion = "6.23.0"
+    toolVersion = "${pmd_plugin_version}"
     consoleOutput = true
     ruleSets = []
-    ruleSetFiles = files("${project.rootDir}/build-config/pmd/pmd-ruleset.xml")
+    ruleSetFiles = files("build-config/pmd/pmd-ruleset.xml")
     sourceSets = [sourceSets.main]
 }
 
@@ -29,14 +27,16 @@ tasks.matching {task -> task.name.startsWith('spotbugs')}.forEach {
 }
 
 jacoco {
-    toolVersion = "0.8.5"
+    toolVersion = "${jacoco_plugin_version}"
 }
 
 def jacocoExcludes = [
     '**/*Application.*',
+    '**/config/**',
     '**/models/**',
     '**/exceptions/**',
     '**/dtos/**',
+    '**/*Constants*',
 ]
 
 jacocoTestReport {
@@ -58,20 +58,24 @@ jacocoTestReport {
 
 jacocoTestCoverageVerification {
     executionData fileTree(project.buildDir.absolutePath).include("jacoco/*.exec")
-
+    afterEvaluate {
+        getClassDirectories().setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: jacocoExcludes)
+        }))
+    }
     violationRules {
         rule {
+            element = 'BUNDLE'
             limit {
-                counter = 'LINE'
+                counter = 'COMPLEXITY'
                 value = 'COVEREDRATIO'
-                minimum = jacocoMinCoverageRequired
+                minimum = new BigDecimal("${jacoco_min_coverage_required}")
             }
             excludes = jacocoExcludes
         }
     }
 }
 
-integrationTest.finalizedBy jacocoTestReport
 check.dependsOn jacocoTestCoverageVerification
 
 file("sonar-project.properties").withReader {
