removed vantage engine

--- a/generators/server/templates/gradle/build.gradle
+++ b/generators/server/templates/gradle/build.gradle
@@ -73,9 +73,7 @@ dependencies {
     implementation "org.apache.commons:commons-lang3:${commons_lang_version}"
     implementation "commons-io:commons-io:${commons_io_version}"
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation "org.projectlombok:lombok"
     testImplementation "org.awaitility:awaitility:${awaitility_version}"
     testImplementation "org.testcontainers:junit-jupiter"
