--- a/generators/server/templates/app/.github/workflows/maven-dev.yml
+++ b/generators/server/templates/app/.github/workflows/maven-dev.yml
@@ -16,7 +16,10 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 1.11
+          java-version: 11
+
+      - name: Grant execute permission for mvnw
+        run: chmod +x mvnw
 
       - name: Cache local Maven repository
         uses: actions/cache@v2
@@ -27,4 +30,4 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build with Maven
-        run: ./mvn clean install
+        run: ./mvnw clean install
