--- a/generators/server/templates/app/sonar-project.properties
+++ b/generators/server/templates/app/sonar-project.properties
@@ -11,11 +11,14 @@ sonar.java.codeCoveragePlugin=jacoco
 <%_ if (buildTool === 'maven') { _%>
 sonar.coverage.jacoco.xmlReportPaths=target/jacoco/test/jacoco.xml,target/jacoco/integrationTest/jacoco.xml
 sonar.junit.reportPaths=target/test-results/test,target/test-results/integrationTest
+sonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
+sonar.java.pmd.reportPaths=target/pmd.xml
 <%_ } _%>
 <%_ if (buildTool === 'gradle') { _%>
 sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
 sonar.junit.reportPaths=build/test-results/test,build/test-results/integrationTest
-<%_ } _%>
 sonar.java.checkstyle.reportPaths=build/reports/checkstyle/main.xml
 sonar.java.pmd.reportPaths=build/reports/pmd/main.xml
 sonar.java.spotbugs.reportPaths=build/reports/spotbugs/main.html
+<%_ } _%>
+
